BugFix: Mobile Navbar Clipping

--- a/Customer/rideList/mobile.css
+++ b/Customer/rideList/mobile.css
@@ -25,7 +25,6 @@
 
     /* Removes border when unexpanded (cleaner) */
     #navbar {
-        height: 100svh;
         border-color: transparent;
         background-color: transparent;
         transition:
